primary in client address and sorting the address based on primary enum