@@ -1,12 +1,15 @@
 package com.technofacts.lnf.client.converter;
 
 import com.technofacts.lnf.client.model.*;
+import com.technofacts.lnf.dto.client.AddressDto;
 import com.technofacts.lnf.dto.client.ClientDto;
 import com.technofacts.lnf.dto.client.ClientOverviewDto;
 
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 public class ClientConverter {
 
@@ -34,7 +37,15 @@ public class ClientConverter {
         dto.setAddresses(new ArrayList<>());
         dto.getNotes().addAll(entity.getNotes().stream()
                 .map(ClientNotesConverter::toTransportModel).filter(Objects::nonNull).toList());
-        dto.getAddresses().addAll(entity.getClientAddresses().stream().map(AddressConverter::toTransportModel).filter(Objects::nonNull).toList());
+
+        List<AddressDto> sortedAddresses = entity.getClientAddresses().stream()
+                .map(AddressConverter::toTransportModel)
+                .filter(Objects::nonNull)
+                .sorted(Comparator.comparingInt(address ->
+                        address.getAddressType() != null && address.getAddressType().equals("Primary") ? 0 : 1))
+                .collect(Collectors.toList());
+
+        dto.getAddresses().addAll(sortedAddresses);
 
         return dto;
     }
